--- a/resume/index.html
+++ b/resume/index.html
@@ -73,7 +73,7 @@
             </div>
 
             <!-- first row -->
-            <div class="row">
+            <div class="rowc">
                 <div class="txt">
                     Name : Angel Chung Jia Chee
                     <br> Whatsapp : 60146033033
@@ -84,12 +84,12 @@
                     Speak : English / Mandrine / Bahasa Malaysia
                     <br> Own Transpot : Yes
                     <br> PDF :
-                    <a href="resume-angelchung.pdf" download="resume.pdf">resume-angelchung.pdf </a>
+                    <a href="resume-angelchung.pdf" download>resume-angelchung.pdf </a>
                 </div>
             </div>
 
             <!-- second row -->
-            <div class="row">
+            <div class="rowc">
                 <div class="center"><strong>Skills</strong></div>
                 <div class="txt txtlh">
                     <div class="smallheader">Proficient</div>
@@ -135,7 +135,7 @@
     </section>
 
     <section id="educationsec">
-        <div class="row">
+        <div class="rowc">
             <div class="smallheader">
                 Education
             </div>
@@ -153,7 +153,7 @@
     </section>
 
     <section id="workingexsec">
-        <div class="row">
+        <div class="rowc">
             <div class="smallheader">Working Experience</div>
             <div class="txt txtlh">
                 <strong><p>Intern (IT support, Leaflet design,Managing e-comerce website)</p></strong>
@@ -167,6 +167,82 @@
         </div>
     </section>
 
+    <!-- .row>.col-12.col-md-6.col-lg-4*3>.card -->
+
+
+    <div class="row" id="row">
+        <div class="col-12 col-lg-6">
+            <div class="card">
+                <p>Name : Angel Chung Jia Chee</p>
+                <p> Whatsapp : 60146033033</p>
+                <p> Email : popokee@hotmail.my </p>
+                <p>Speak : English / Mandrine / Bahasa Malaysia</p>
+                <p> Own Transpot : Yes</p>
+                <p> PDF :<a href="resume-angelchung.pdf" download>resume-angelchung.pdf </a></p>
+            </div>
+        </div>
+        <div class="col-12 col-lg-6">
+            <div class="card">
+                <h2>Skills</h2>
+                <div class="card-body">
+                    <h4>Proficient</h4>
+                    <ul>
+                        <li>HTML5/CSS/Java Script</li>
+                        <li>PHP</li>
+                    </ul>
+                    <h4>Familiar</h4>
+                    <ul>
+                        <li>C#/C++</li>
+                        <li>Java</li>
+                        <li>Visual Basic</li>
+                        <li>Python</li>
+                    </ul>
+                    <h4>Tools Learned</h4>
+                    <ul>
+                        <li>Visual Studio 2017 / Visual Studio Code</li>
+                        <li>Android Studio</li>
+                        <li>Netbean IDE 11.2</li>
+                        <li>Microsoft SQL / Access</li>
+                        <li>Cpanel</li>
+                        <li>phpmyadmin</li>
+                        <li>PyCharm</li>
+                    </ul>
+                    <h4>Other</h4>
+                    <ul>
+                        <li>Adobe Photoshop cc</li>
+                        <li>Adobe Illustrator</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-6">
+            <div class="card">
+                <h2>Education</h2>
+                <div class="card-body m">
+                    <h5>INSTITUT TEKNOLOGI MAKLUMAT NUSANTARA (NIIT)</h5>
+                    <p>DIPLOMA IN INFORMATION TECHNOLOGY (2018 - 2020)</p>
+                    <p>CGPA : 3.27</p>
+                    <h5>SEKOLAH MENENGAH KEBANGSAAN PAKU</h5>
+                    <p>SIJIL PELAJARAN MALAYSIA(2017)</p>
+                    <p>Passed all subjects. Excellent in Mathematics</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-lg-6">
+            <div class="card">
+                <h2>Working Experience</h2>
+                <div class="card-body m">
+                    <h5>Intern (IT support, Leaflet design,Managing e-comerce website)</h5>
+                    <p>K & L Farming Industries SDN. BHD.</p>
+                    <p>2 February 2020 – 1 May 2020 (3 month)</p>
+                    <br>
+                    <h5>Part Time (Organize database)</h5>
+                    <p>NIIT College</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="resume.js"></script>
 </body>
 
