--- a/whatsapp_without_contact/index.html
+++ b/whatsapp_without_contact/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="whatsappcont.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <title>
         OTT Whatsapp Tool
@@ -14,27 +18,45 @@
 
 </head>
 
-<style>
-    .steptxt {
-        padding: 15px;
-        line-height: 35pt;
-        font-size: 17pt;
-    }
-    
-    a {
-        text-decoration: none;
-        color: #eeeeee;
-    }
-</style>
-
 <body>
 
-    <div class="bigbox">
+    <div class="col-xs-12 title">
+        Whatsapp Without Contact
+    </div>
+
+    <div class="row pm">
+        <div class="col-12 col-lg-5 pml">
+            <div class="mbox pmt">
+                <a href="msg.html">Message </a>
+            </div>
+            <div class="stepbox steptxt">
+                STEP 1 : ENTER COUNTRY CODE
+                <br/> STEP 2 : ENTER PHONE NUMBER
+                <br/> STEP 3 : PRESS ENTER
+                <br/> STEP 4 : LOGIN WEB WHATSAPP
+            </div>
+        </div>
+
+        <div class="d-none d-sm-block borderr" id="line"></div>
+
+        <div class="col-12 col-lg-5 pml">
+            <div class=" mtbox pmt">
+                <a href="msg_with_txt.html">Message with text</a>
+            </div>
+            <div class="stepbox steptxt">
+                STEP 1 : ENTER COUNTRY CODE
+                <br/> STEP 2 : ENTER PHONE NUMBER
+                <br/> STEP 3 : ENTER TEXT, THEN ENTER
+                <br/> STEP 4 : LOGIN WEB WHATSAPP
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="bigbox">
         Whatsapp Without Contact
     </div>
 
     <div class="mbox">
-        <!-- <div class="mboxtxt">Message</div> -->
         <a href="msg.html">Message </a>
     </div>
 
@@ -60,7 +82,7 @@
             <br/> STEP 3 : ENTER TEXT, THEN ENTER
             <br/> STEP 4 : LOGIN WEB WHATSAPP
         </div>
-    </div>
+    </div> -->
 
 </body>
 
