--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="icon.png">
 
     <title>
         My Resume
@@ -21,13 +22,13 @@
 <body>
 
     <div class="profileborder">
-        <img src="luffy.jpg" alt="luffy" class="image">
+        <img src="1.jpg" alt="luffy" class="image">
     </div>
 
     <div class="txtfield">
         <span id="name"><strong>Angel Chung Jia Chee</strong></span>
         <br>
-        <span>Job Seek For Web Developer</span>
+        <span>Job Seek For Web Developer | Programmer </span>
         <br>
         <a href="https://wa.me/60146033033" target="_blank">60146033033 |</a>
         <a href="mailto:popokee@hotmail.my">popokee@hotmail.my</a>
@@ -84,7 +85,7 @@
                     Speak : English / Mandrine / Bahasa Malaysia
                     <br> Own Transpot : Yes
                     <br> PDF :
-                    <a href="resume-angelchung.pdf" download>resume-angelchung.pdf </a>
+                    <a href="resume-angelchung.pdf" download="resume_angelchung" target="_blank">Click to Download</a>
                 </div>
             </div>
 
@@ -104,7 +105,7 @@
                         <li>C#/C++</li>
                         <li>Java</li>
                         <li>Visual Basic</li>
-                        <li>Python</li>
+                        <!-- <li>Python</li> -->
                     </ul>
                 </div>
                 <div class="txt txtlh">
@@ -116,7 +117,7 @@
                         <li>Microsoft SQL/Access</li>
                         <li>Cpanel</li>
                         <li>phpmyadmin</li>
-                        <li>PyCharm</li>
+                        <!-- <li>PyCharm</li> -->
                     </ul>
                 </div>
                 <div class="txt txtlh">
@@ -131,7 +132,7 @@
     </section>
 
     <section id="resumesec">
-        <iframe src="resume-angelchung.pdf"></iframe>
+        <iframe src="resume-angelchung.pdf" class="iframe"></iframe>
     </section>
 
     <section id="educationsec">
@@ -166,6 +167,23 @@
             </div>
         </div>
     </section>
+
+    <!-- <section id="portfoliosec">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm pb">
+                    <iframe src="https://getbootstrap.com/docs/4.0/layout/grid/" frameborder="1"></iframe>
+                    <a href="https://getbootstrap.com/docs/4.0/layout/grid/">abc</a>
+                </div>
+                <div class="col-sm pb">
+                    One of three columns
+                </div>
+                <div class="col-sm pb">
+                    One of three columns
+                </div>
+            </div>
+        </div>
+    </section> -->
 
     <!-- .row>.col-12.col-md-6.col-lg-4*3>.card -->
 
