--- a/resume/index.html
+++ b/resume/index.html
@@ -85,7 +85,7 @@
                     Speak : English / Mandrine / Bahasa Malaysia
                     <br> Own Transpot : Yes
                     <br> PDF :
-                    <a href="resume-angelchung.pdf" download="resume_angelchung" target="_blank">Click to Download</a>
+                    <a href="resume-angelchung.pdf" target="_blank">Click to View</a>
                 </div>
             </div>
 
