country code update

--- a/whatsapp_without_contact/msg_with_txt.html
+++ b/whatsapp_without_contact/msg_with_txt.html
@@ -34,15 +34,15 @@
             <select id="selectid">
               <option value="0">Country Code</option>
               <option value="60">Malaysia (+60)</option>
-              <option value="2">bla2</option>
-              <option value="3">bla3</option>
-              <option value="4">bla4</option>
-              <option value="5">bla5</option>
-              <option value="6">bla6</option>
-              <option value="7">bla7</option>
-              <option value="8">bla8</option>
-              <option value="9">bla9</option>
-              <option value="10">bla10</option>
+              <option value="+49">Germany</option>
+              <option value="+55">Brazil</option>
+              <option value="+966">Saudi Arabia</option>
+              <option value="+52">Mexico</option>
+              <option value="+86">China</option>
+              <option value="+57">Colombia</option>
+              <option value="+852">Hong Kong</option>
+              <option value="+91">India</option>
+              <option value="+81">Japan</option>
             </select>
         </div>
 
